--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
+html, body {
+    background-color: #3A5A40;
+}
+
 .App {
-  text-align: center;
+    background-color: #3A5A40;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
+    gap: 20px;
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-container {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.board-container {
+    width: 80%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tasks-container {
+    display: grid;
+    gap: 20px;
+    background-color: #588157;
+    padding: 0px;
+    border-radius: 10px;
+    border: 20px solid #588157;
 }
 
-.App-link {
-  color: #61dafb;
+.task-container {
+    background-color: #A3B18A;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-header {
+    font-weight: bold;
+}
+
+.delete-task {
+    font-size: 30px;
+}
+
+.delete-task:hover {
+    cursor: pointer;
+}
+
+.add-task-btn {
+    background: none;
+	color: inherit;
+	border: 2px solid #588157;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    background-color: #A3B18A;
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 15px;
+    white-space: nowrap;
+}
+
+.no-tasks-available {
+    font-weight: bold;
+    background-color: #A3B18A;
+    padding: 10px;
+}
+
+.add-task-form {
+    display: none;
+    width: 25%;
+    background-color: #A3B18A;
+    padding: 10px;
+    border-radius: 10px;
+    border: 20px solid #588157;
+}
+
+.display-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    gap: 10px;
+}
+
+.add-task-form label {
+    font-weight: bold;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    width: 100%;
+}
+
+.form-control label, .form-control input {
+    overflow: hidden;
+}
+
+.form-control input[type=text]{
+    border: 1px solid #A3B18A;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.add-task-form input[type=submit] {
+    background: none;
+	color: inherit;
+	padding: 10px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    background-color: #588157;
+    border-radius: 10px;
+    font-weight: bold;
+    border: none;
+}
+
+.error-input {
+    position: relative;
+    animation: shake .1s linear;
+    animation-iteration-count: 3;
+    background-color: #ffdddd;
+}
+
+@keyframes shake {
+    0% { left: -5px; }
+    100% { right: -5px; }
 }
